# delivery_django_cllient

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
apps/users/: admin.py  models.py  urls.py  utils.py
apps/users/api/: serializers.py  viewsets.py
apps/users/templates/: activation.txt
config/: .env.sample  .secrets.sample.toml  config.py  settings.toml
delivery_client/: asgi.py  settings.py  urls.py  wsgi.py
nginx/: nginx.conf
templates/users/: activation.html
